--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,9 @@ header .navbar {
 header .navbar .nav-item {
   margin-left: 25px;
 }
+header .navbar .navbar-toggler {
+  color: #FFFFFF;
+}
 header .navbar ul li a {
   font-family: "Segoe UI", Arial, sans-serif;
   font-weight: 600;
