--- a/scss/header.scss
+++ b/scss/header.scss
@@ -25,6 +25,9 @@ header {
         .nav-item {
             margin-left: 25px;
         }
+        .navbar-toggler {
+            color: #FFFFFF;
+        }
         ul li a {
             font-family: "Segoe UI", Arial, sans-serif;
             font-weight: 600;
