--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 
 main {
     margin-top: 5rem;
+    /*S1*/
     #header-text-img {
         background-image: url(../img/Rectangle\ 9.png);
         background-position: center;
@@ -31,6 +32,88 @@ main {
                 line-height: 24px;
                 text-align: center;
                 color: #FFFFFF;
+            }
+        }
+    }
+    /*S2*/
+    #menyu {
+        width: 100%;
+        height: 706px;
+        background-color: #FFFFFF;
+        margin: 50px 0;
+        padding: 0 15px;
+        .menyu-head {
+            text-align: center;
+            padding: 50px 0;
+            h1 {
+                font-family: 'Segoe UI';
+                font-style: normal;
+                font-weight: 600;
+                font-size: 33.4025px;
+                line-height: 131.1%;
+                letter-spacing: 0.01em;
+                color: #000000;
+            }
+        }
+        .menyu-container {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            gap: 50px;
+            .menu-item {
+                width: 429px;
+                height: 223px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 10px;
+                border: 2px solid #ffffff;
+                border-radius: 5px;
+                transition: all .3s ease-in-out;
+                cursor: pointer;
+                &:hover {
+                    border: 2px solid #811418;
+                    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                    transform: scale(1.05);
+                }
+                .menyu-img {
+                    flex-basis: 50%;
+                    img {
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+                .menyu-text {
+                    flex-basis: 50%;
+                    h4 {
+                        font-family: 'Segoe UI';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 17.1783px;
+                        line-height: 23px;
+                        color: #000000;
+                    }
+                    h5 {
+                        font-family: 'Segoe UI';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 21.6198px;
+                        line-height: 29px;
+                        display: flex;
+                        align-items: flex-end;
+                        color: #8F161A;
+                    }
+                    p {
+                        font-family: 'Segoe UI';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 11.4522px;
+                        line-height: 143.5%;
+                        color: #000000;
+                    }
+                }
             }
         }
     }
