--- a/scss/mediaquery.scss
+++ b/scss/mediaquery.scss
@@ -1,3 +1,12 @@
+@media (max-width: 1420px) {
+    main {
+        #menyu {
+            height: auto;
+            padding-bottom: 15px;
+        }
+    }
+}
+
 @media (max-width: 575.98px) {
     main {
         #header-text-img {
