menyu edit and modal

--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,7 @@ main #menyu {
   background-color: #FFFFFF;
   margin: 50px 0;
   padding: 0 15px;
+  /*MODAL*/
 }
 main #menyu .menyu-head {
   text-align: center;
@@ -226,6 +227,87 @@ main #menyu .menyu-container .menu-item .menyu-text p {
   font-size: 11.4522px;
   line-height: 143.5%;
   color: #000000;
+}
+main #menyu .products-preview {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+main #menyu .products-preview .preview {
+  width: 546.43px;
+  max-width: 100%;
+  height: 450px;
+  display: none;
+  padding: 2rem;
+  text-align: center;
+  background: #fff;
+  position: relative;
+  border-radius: 5px;
+}
+main #menyu .products-preview .preview .products-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  flex-direction: column;
+}
+main #menyu .products-preview .preview img {
+  width: 355.26px;
+  max-width: 100%;
+  height: 177.77px;
+  object-fit: contain;
+}
+main #menyu .products-preview .preview .card-prices {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+main #menyu .products-preview .preview .card-prices h4 {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17.1783px;
+  line-height: 23px;
+  color: #000000;
+}
+main #menyu .products-preview .preview .card-prices h5 {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21.6198px;
+  line-height: 29px;
+  display: flex;
+  align-items: flex-end;
+  color: #8F161A;
+}
+main #menyu .products-preview .preview p {
+  width: 70%;
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11.8421px;
+  line-height: 16px;
+  text-align: left;
+  color: #000000;
+}
+main #menyu .products-preview .preview.active {
+  display: inline-block;
+}
+main #menyu .products-preview .preview .fa-times {
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
 }
 
 @media (max-width: 1420px) {
