--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ main #vidoe .video-bg {
 }
 main #vidoe .video-bg .img1 {
   width: 100%;
-  height: 600px;
+  height: 630px;
   object-fit: cover;
   position: relative;
 }
@@ -323,6 +323,59 @@ main #vidoe .video-bg .video-player video:focus {
 main #vidoe .video-bg .vidoe-container.active {
   display: block;
 }
+main #about {
+  width: 100%;
+  margin-bottom: 50px;
+  padding: 85px 0;
+  background-color: white;
+}
+main #about .about-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main #about .about-container .about-text {
+  flex-basis: 50%;
+  margin-right: 75px;
+}
+main #about .about-container .about-text h1 {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 47px;
+  color: #000000;
+}
+main #about .about-container .about-text p {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 143.5%;
+  /* or 23px */
+  color: #000000;
+  margin-bottom: 15px !important;
+}
+main #about .about-container .about-text img {
+  width: 109px;
+  max-width: 100%;
+  height: 68.07px;
+}
+main #about .about-container .about-img {
+  flex-basis: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+main #about .about-container .about-img img {
+  width: 274px;
+  max-width: 100%;
+  height: 467.44px;
+  object-fit: cover;
+  border-radius: 16.4426px;
+}
 
 @media (max-width: 1420px) {
   main #menyu {
@@ -332,10 +385,23 @@ main #vidoe .video-bg .vidoe-container.active {
 }
 @media (max-width: 1110px) {
   main #vidoe .video-bg .img1 {
-    height: 50%;
+    height: 60%;
   }
   main #vidoe .video-bg .video-player video {
     height: 500px;
+  }
+}
+@media (max-width: 1188px) {
+  main #about .about-container {
+    flex-direction: column;
+  }
+  main #about .about-container .about-text {
+    flex-basis: 100%;
+    margin-right: 0;
+  }
+  main #about .about-container .about-img {
+    flex-basis: 100%;
+    flex-direction: column;
   }
 }
 @media (max-width: 575.98px) {
