--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,7 +209,7 @@ main {
             position: relative;
             .img1 {
                 width: 100%;
-                height: 600px;
+                height: 630px;
                 object-fit: cover;
                 position: relative;
             }
@@ -263,6 +263,59 @@ main {
             }
             .vidoe-container.active {
                 display: block;
+            }
+        }
+    }
+    #about {
+        width: 100%;
+        margin-bottom: 50px;
+        padding: 85px 0;
+        background-color: #ffff;
+        .about-container {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .about-text {
+                flex-basis: 50%;
+                margin-right: 75px;
+                h1 {
+                    font-family: 'Segoe UI';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 35px;
+                    line-height: 47px;
+                    color: #000000;
+                }
+                p {
+                    font-family: 'Segoe UI';
+                    font-style: normal;
+                    font-weight: 300;
+                    font-size: 16px;
+                    line-height: 143.5%;
+                    /* or 23px */
+                    color: #000000;
+                    margin-bottom: 15px !important;
+                }
+                img {
+                    width: 109px;
+                    max-width: 100%;
+                    height: 68.07px;
+                }
+            }
+            .about-img {
+                flex-basis: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 15px;
+                img {
+                    width: 274px;
+                    max-width: 100%;
+                    height: 467.44px;
+                    object-fit: cover;
+                    border-radius: 16.4426px;
+                }
             }
         }
     }
