--- a/scss/main.scss
+++ b/scss/main.scss
@@ -327,6 +327,7 @@ main {
             .map {
                 iframe {
                     max-width: 100%;
+                    border-radius: 5px;
                 }
             }
             h1 {
