--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,8 @@ header .navbar ul li a {
 header .navbar ul li a:hover {
   opacity: 0.7;
 }
-header .navbar .right-col .social {
+
+.right-col .social {
   color: #ffffff;
   border: 1.6336px solid #FFFFFF;
   border-radius: 50%;
@@ -51,7 +52,7 @@ header .navbar .right-col .social {
   justify-content: center;
   flex-direction: row;
 }
-header .navbar .right-col .social:first-child {
+.right-col .social:first-child {
   margin-right: 20px;
 }
 
@@ -385,6 +386,7 @@ main #elaqe .elaqe-container {
 }
 main #elaqe .elaqe-container .map iframe {
   max-width: 100%;
+  border-radius: 5px;
 }
 main #elaqe .elaqe-container h1 {
   font-family: "Segoe UI";
@@ -434,6 +436,84 @@ main #elaqe .elaqe-container .input-bottom {
   width: 100%;
 }
 
+footer {
+  width: 100%;
+  background: #fff;
+  color: rgba(51, 51, 51, 0.7);
+  padding: 40px 0;
+}
+footer .right-col a {
+  color: #83848C !important;
+  border: 1.6336px solid #83848C !important;
+  transition: all 0.3s ease-in-out;
+}
+footer .right-col a:first-child {
+  margin-right: 10px !important;
+}
+footer .right-col a:hover {
+  color: #393939 !important;
+  border: 1.6336px solid #393939 !important;
+}
+footer .list-unstyled li a {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 27px;
+  color: #83848C;
+  transition: all 0.3s ease-in-out;
+}
+footer .list-unstyled li a:hover {
+  color: #393939;
+}
+footer h4 {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 25px;
+  color: #000000;
+}
+footer .copy {
+  padding: 10px 0;
+  width: 100%;
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: #83848C;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+footer .copy a {
+  display: flex;
+  align-items: center;
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: #83848C;
+}
+footer .copy a img {
+  margin: 0 15px;
+}
+footer .footer-pad p {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 27px;
+  color: #83848C;
+  margin: 15px 0 !important;
+}
+footer .footer-pad .elaqe-text {
+  font-size: 16px;
+}
+
 @media (max-width: 1420px) {
   main #menyu {
     height: auto;
@@ -466,9 +546,25 @@ main #elaqe .elaqe-container .input-bottom {
     margin-bottom: 35px;
   }
 }
+@media (max-width: 760px) {
+  footer .kecid {
+    margin-top: 15px;
+  }
+}
 @media (max-width: 575.98px) {
   main #header-text-img .header-text h1 {
     font-size: 40px;
+  }
+
+  footer .copy {
+    gap: 10px;
+    justify-content: center;
+  }
+  footer .elaqe-link {
+    margin: 15px 0;
+  }
+  footer .kecid {
+    margin-top: 15px;
   }
 }
 @media (max-width: 450px) {
