footer small edit

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -54,7 +54,8 @@ footer {
             display: flex;
             align-items: center;
             img {
-                margin: 0 15px;
+                margin-left: 8px;
+                width: 110px;
             }
             font-family: 'Segoe UI';
             font-style: normal;
