--- a/css/main.css
+++ b/css/main.css
@@ -499,7 +499,8 @@ footer .copy a {
   color: #83848C;
 }
 footer .copy a img {
-  margin: 0 15px;
+  margin-left: 8px;
+  width: 110px;
 }
 footer .footer-pad p {
   font-family: "Segoe UI";
