--- a/css/main.css
+++ b/css/main.css
@@ -499,7 +499,7 @@ footer .copy a {
   color: #83848C;
 }
 footer .copy a img {
-  margin-left: 8px;
+  margin-right: 8px;
   width: 110px;
 }
 footer .footer-pad p {
