--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -54,7 +54,7 @@ footer {
             display: flex;
             align-items: center;
             img {
-                margin-left: 8px;
+                margin-right: 8px;
                 width: 110px;
             }
             font-family: 'Segoe UI';
