--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,6 +11,23 @@ body {
     background-attachment: fixed !important;
 }
 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #811418;
+}
+
 * {
     scroll-behavior: smooth;
     box-sizing: border-box;
